tests/ui/error/builder_does_not_support_unions.rs
#[derive(tidy_builder::Builder)]
union MyUnion {
    f1: u32,
    f2: f32,
}

fn main() {}